# frequent-hitters-new

./: .gitattributes  .gitignore  .gitmodules  README.md  bad_selections.txt  compare_cleaned_outputs.py  environment.frequent-hitters.yml  figures_and_tables.py  integration_test.sh  notes.md  quick_model_jobs_full.sh
assay-cleaning/: README.md  pyproject.toml
assay-cleaning/src/assay_cleaning/: __init__.py  cli.py
assay-etl/: README.md  pyproject.toml
assay-etl/data/: hd3_annotations.csv
assay-etl/outputs/: assay_metadata.csv  assay_metadata.sqlite  assay_rscores.parquet.part01  assay_rscores.parquet.part03
assay-etl/scripts/: join_large_file.py  split_large_file.py
assay-etl/src/assay_etl/: __init__.py  aggregation.py  assay_parser.py  cli.py  download.py  ftp_download.py  manual_annotation.py  meta_db.py  metadata.py  pcassay_catalog.py  polars_helpers.py  rich_console.py  rscores.py  selection.py  utils.py
clean-data/: README.md  pyproject.toml
clean-data/src/clean_split/: cli.py
data-pipeline/: README.md  pyproject.toml  pytest.ini
data-pipeline/src/pipeline/: __init__.py  cli.py  io.py  manifest.py  schema.py  split.py
data-pipeline/src/pipeline/config/paths/: paths.yaml
data-pipeline/src/pipeline/config/split/: split.yaml
data/clean/: assay_cleaning_stats.json  biochemical.parquet  cellular.parquet
dataset-pipeline/: README.md  pyproject.toml
dataset-pipeline/src/dataset_pipeline/: __init__.py  cli.py  eb.py  export.py  filters.py  io.py  schema.py  split.py  viz.py
dataset-pipeline/src/dataset_pipeline/config/: __init__.py  config.yaml
dataset-pipeline/src/dataset_pipeline/config/filters/: filters.yaml
dataset-pipeline/src/dataset_pipeline/config/split/: split.yaml
model-jobs/: README.md  pyproject.toml
model-jobs-uge/: README.md  pyproject.toml
model-jobs-uge/configs/examples/: uge_grid.yaml
model-jobs-uge/src/model_jobs_uge/: __init__.py  cli.py  datasets.py  jobgen.py
model-jobs/configs/: main_experiments.yaml  pubchem_main_experiments.yaml  pubchem_threshold_experiments.yaml  threshold_experiments.yaml
model-jobs/configs/examples/: local_grid.yaml
model-jobs/internal/: README.md
model-jobs/internal/configs/: main_experiments.yaml  pubchem_main_experiments.yaml  pubchem_threshold_experiments.yaml  threshold_experiments.yaml
model-jobs/src/model_jobs/: __init__.py  cli.py  cli_uge.py  datasets.py  jobgen.py  jobgen_uge.py
notebooks/: dataset_sizes_for_paper.ipynb  pubchem_data.ipynb
pubchem-bioassay/: README.md  pyproject.toml
pubchem-bioassay/data/: pcassay_result.txt
pubchem-bioassay/outputs/: assay_metadata.csv  assay_rscores.parquet.part02
pubchem-bioassay/scripts/: join_large_file.py  split_large_file.py
pubchem-bioassay/src/pubchem_bioassay/: __init__.py  aggregation.py  download.py  llm_annotation.py  rscores.py  selection.py  utils.py
pubchem-bioassay/src/pubchem_bioassay/cli/: main.py
pubchem-bioassay/src/pubchem_bioassay/llm/: __init__.py  factory.py
train-pred/: README.md  pyproject.toml
train-pred/configs/: main_experiments.yaml  pubchem_main_experiments.yaml  pubchem_threshold_experiments.yaml
train-pred/internal/: README.md
train-pred/internal/configs/: main_experiments.yaml  pubchem_main_experiments.yaml  pubchem_threshold_experiments.yaml  threshold_experiments.yaml
train-pred/src/train_pred/: cli.py  cli_uge.py  datasets.py  jobgen.py  jobgen_uge.py
