[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dataset-pipeline"
version = "0.1.0"
description = "Murcko-scaffold aware assay processing pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3.2",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "polars>=0.20.0",
  "rdkit>=2023.9.5",
]

[project.scripts]
dataset-pipeline = "dataset_pipeline.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.9",
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["E203", "E501", "B008", "B009", "B905", "S103", "S110", "S320", "S603", "S607", "UP006", "UP007", "UP015", "UP035", "UP038", "B904", "F401", "F811", "F841", "F541", "I001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dataset_pipeline.*"]
ignore_errors = true
