[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "model-jobs"
version = "0.1.0"
description = "Job generator for Chemprop training and prediction workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "polars>=0.20.0",
  "typer>=0.20.0",
  "rich>=14.2.0",
]

[project.scripts]
model-jobs = "model_jobs.cli:main"
model-jobs-qsub = "model_jobs.cli_uge:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.9",
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["E203", "E501", "B008", "B009", "B905", "S103", "S110", "S320", "S603", "S607", "UP006", "UP007", "UP015", "UP035", "UP038", "B904", "F401", "F811", "F841", "F541", "I001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["model_jobs.jobgen", "model_jobs.jobgen_uge"]
ignore_errors = true
