[project]
name = "pubchem-bioassay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
llm-annotation = [
    "langchain>=1.0.8",
    "langchain-google-vertexai>=3.0.3",
    "langchain-openai>=1.0.3",
    "langchain-xai>=1.0.0",
]

[project.scripts]
pubchem-bioassay = "pubchem_bioassay.cli.main:app"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
pubchem-bioassay = { path = "src" }

[tool.pytest.ini_options]
markers = [
    "slow: marks slow end-to-end tests."
]
